[project]
name = "nldate"
version = "0.1.0"
description = "Natural Language Date Parser"
readme = "README.md"
authors = [
    { name = "Yash Tandon", email = "yashtandon2005@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
